--- a/index.html
+++ b/index.html
@@ -72,6 +72,19 @@
       <a href="#plan">create your plan</a>
     </nav>
   </header>
+
+  <main class="container mx-auto space-y-[92px] mx-[81px]">
+    <section
+        class="bg-[url('./assets/Bitmap.jpg')] bg-cover h-[600px] rounded-[10px] text-white flex items-center pl-[85px]">
+        <div class="max-w-[493px]">
+            <h1 class="mb-[32px]">Great coffee made simple.</h1>
+            <p class="body mb-[56px]">Start your mornings with the world’s
+            best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door,
+            at your schedule.</p>
+            <button>Create your plan</button>
+        </div>
+        </section>
+  </main>
 </body>
 
 </html>
