--- a/index.html
+++ b/index.html
@@ -64,27 +64,71 @@
 </head>
 
 <body class="bg-light-cream">
-  <header class="py-[44px] px-[81px] flex-between">
-    <img src="./assets/logo.svg" alt="Cofeeroaster" class="w-[235px] h-[26px]">
-    <nav>
-      <a href="#home">home</a>
-      <a href="#about">about us</a>
-      <a href="#plan">create your plan</a>
-    </nav>
-  </header>
+    <header class="py-[44px] px-[81px] flex-between">
+        <img src="./assets/logo.svg" alt="Cofeeroaster" class="w-[235px] h-[26px]">
+        <nav>
+            <a href="#home">home</a>
+            <a href="#about">about us</a>
+            <a href="#plan">create your plan</a>
+        </nav>
+    </header>
 
-  <main class="container mx-auto space-y-[92px] mx-[81px]">
-    <section
-        class="bg-[url('./assets/Bitmap.jpg')] bg-cover h-[600px] rounded-[10px] text-white flex items-center pl-[85px]">
-        <div class="max-w-[493px]">
-            <h1 class="mb-[32px]">Great coffee made simple.</h1>
-            <p class="body mb-[56px]">Start your mornings with the world’s
-            best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door,
-            at your schedule.</p>
-            <button>Create your plan</button>
-        </div>
+    <main class="container mx-auto space-y-[92px] mx-[81px]">
+        <section
+            class="bg-[url('./assets/Bitmap.jpg')] bg-cover h-[600px] rounded-[10px] text-white flex items-center pl-[85px]">
+            <div class="max-w-[493px]">
+                <h1 class="mb-[32px]">Great coffee made simple.</h1>
+                <p class="body mb-[56px]">Start your mornings with the world’s
+                    best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to
+                    your door,
+                    at your schedule.</p>
+                <button>Create your plan</button>
+            </div>
         </section>
-  </main>
+
+        <section>
+            <div class="text-center"><span class="title">our collection</span></div>
+            <div class="flex grid-cols-4 gap-[37px] px-[20px]">
+                <div class="space-y-[35px]">
+                    <img src="./assets/kopi1 copy.png" class="w-[255px]" alt="Gran Espresso">
+                    <div class="space-y-[24px]">
+                        <h4>Gran Espresso</h4>
+                        <p class="body">Light and flavorful blend with cocoa and black pepper for an intense experience
+                        </p>
+                    </div>
+                </div>
+
+                <div class="space-y-[35px]">
+                    <img src="./assets/kopi1 copy.png" class="w-[255px]" alt="Gran Espresso">
+                    <div class="space-y-[24px]">
+                        <h4>Gran Espresso</h4>
+                        <p class="body">Light and flavorful blend with cocoa and black pepper for an intense experience
+                        </p>
+                    </div>
+                </div>
+
+                <div class="space-y-[35px]">
+                    <img src="./assets/kopi1 copy.png" class="w-[255px]" alt="Gran Espresso">
+                    <div class="space-y-[24px]">
+                        <h4>Gran Espresso</h4>
+                        <p class="body">Light and flavorful blend with cocoa and black pepper for an intense experience
+                        </p>
+                    </div>
+                </div>
+
+                <div class="space-y-[35px]">
+                    <img src="./assets/kopi1 copy.png" class="w-[255px]" alt="Gran Espresso">
+                    <div class="space-y-[24px]">
+                        <h4>Gran Espresso</h4>
+                        <p class="body">Light and flavorful blend with cocoa and black pepper for an intense experience
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
 </body>
 
 </html>
