--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             --color-light-cream: #FEFCF7;
             --color-grey: #83888F;
             --color-disabled: #E2DEDB;
+            --color-Midnight:#2C343E;
             /* fonts */
             --font-barlow: "Barlow", sans-serif;
             --font-fraunces: "Fraunces", serif;
@@ -124,6 +125,50 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="bg-Midnight rounded-[10px] text-light-cream h-[577px] 
+            flex flex-col items-center space-y-[86px]">
+            <div class="max-w-[540px] space-y-[32px] text-center pt-[100px]">
+                <h2>Why choose us?</h2>
+                <p class="body space-y-[24px]">
+                    A large part of our role is buying great coffee as well as
+                    helping international buyers discover exceptional coffee from
+                    around the world. This means working closely with the best coffee
+                    growers to give you a more impactful experience on every level.
+                </p>
+            </div>
+            <div class="grid grid-cols-3 gap-[30px] px-[85px]">
+                <!-- card 1 -->
+                 <div class="card">
+                    <img src="./assets/coffee-bean.svg" alt="coffee-bean" class="w-[72px] h-[72px]">
+                    <div class="text-center space-y-[24px]">
+                        <h4>Best quality</h4>
+                        <p class="body">
+                            Discover an endless variety of the world’s 
+                            best artisan coffee from each of our roasters.
+                        </p>
+                    </div>
+                 </div>
+                 <div class="card">
+                    <img src="./assets/Combined Shape (3).svg" alt="coffee-bean" class="w-[72px] h-[72px]">
+                    <div class="text-center space-y-[24px]">
+                        <h4>Exclusive benefits</h4>
+                        <p class="body">
+                            Special offers and swag when you subscribe, including 30% off your first shipment.
+                        </p>
+                    </div>
+                 </div>
+                 <div class="card">
+                    <img src="./assets/Combined Shape (4).svg" alt="coffee-bean" class="w-[72px] h-[72px]">
+                    <div class="text-center space-y-[24px]">
+                        <h4>Free shipping</h4>
+                        <p class="body">
+                            We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
+                        </p>
+                    </div>
+                 </div>
             </div>
         </section>
 
