--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <img src="./assets/logo.svg" alt="Cofeeroaster" class="w-[235px] h-[26px]">
         <nav>
             <a href="#home">home</a>
-            <a href="#about">about us</a>
+            <a href="./about.html">about us</a>
             <a href="#plan">create your plan</a>
         </nav>
     </header>
 
-    <main class="container mx-auto space-y-[92px] mx-[81px]">
+    <main class="container mx-auto space-y-[92px]">
         <section
             class="bg-[url('./assets/Bitmap.jpg')] bg-cover h-[600px] rounded-[10px] text-white flex items-center pl-[85px]">
             <div class="max-w-[493px]">
@@ -205,6 +205,24 @@
 
             <button>Create your plan</button>
         </section>
+
+        <footer class="bg-Midnight h-[120px] flex-between px-[85px] mb-[88px]">
+        <div class="flex gap-[103px]">
+          <img src="assets/Group 5.png" alt="Cofeeroaster" class="w-[235px] h-[25px]">
+          <nav>
+            <a href="#home">home</a>
+            <a href="./about.html">about us</a>
+            <a href="#plan">Create your plan</a>
+          </nav>
+          
+        </div>
+        <div class="flex-between gap-[24px]">
+          <a href="www.facebook.com"><img src="assets/Path (2).svg" alt="Facebook"></a>
+          <a href="www.instagram.com"><img src="assets/Shape.svg" alt="Instagram"></a>
+          <a href="www.twitter"><img src="assets/Path.svg" alt="Twitter"></a>
+          </ul>
+        </div>
+      </footer>
 
 
     </main>
