create file about

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <header class="py-[44px] px-[81px] flex-between">
         <img src="./assets/logo.svg" alt="Cofeeroaster" class="w-[235px] h-[26px]">
         <nav>
-            <a href="#home">home</a>
+            <a href="./index.html">home</a>
             <a href="./about.html">about us</a>
             <a href="#plan">create your plan</a>
         </nav>
