--- a/about.html
+++ b/about.html
@@ -67,7 +67,14 @@
 </head>
 
 <body class="bg-light-cream">
-
+    <header class="py-[44px] px-[81px] flex-between">
+        <img src="./assets/logo.svg" alt="Cofeeroaster" class="w-[235px] h-[26px]">
+        <nav>
+            <a href="./index.html">home</a>
+            <a href="./about.html">about us</a>
+            <a href="#plan">create your plan</a>
+        </nav>
+    </header>  
 
 </body>
 
