create hero af about

--- a/about.html
+++ b/about.html
@@ -76,6 +76,15 @@
         </nav>
     </header>  
 
+        <main class="container mx-auto space-y-[92px]">
+      <section
+            class="bg-[url('./assets/Bitmap1.jpg')] bg-cover h-[450px] text-light-cream flex items-center pl-[85px]">
+            <div class="max-w-[493px]">
+                <h1 class="mb-[32px]">About Us</h1>
+                <p class="body mb-[56px]">Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee from around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in every shipment.</p>
+            </div>
+      </section>
+
 </body>
 
 </html>
