--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <main class="container mx-auto space-y-[92px]">
         <section
-            class="bg-[url('./assets/Bitmap.jpg')] bg-cover h-[600px] rounded-[10px] text-white flex items-center pl-[85px]">
+            class="bg-[url('./assets/Bitmap.jpg')] bg-cover h-[600px] rounded-[10px] text-light-cream flex items-center pl-[85px]">
             <div class="max-w-[493px]">
                 <h1 class="mb-[32px]">Great coffee made simple.</h1>
                 <p class="body mb-[56px]">Start your mornings with the world’s
