--- a/about.html
+++ b/about.html
@@ -74,16 +74,35 @@
             <a href="./about.html">about us</a>
             <a href="#plan">create your plan</a>
         </nav>
-    </header>  
+    </header>
 
-        <main class="container mx-auto space-y-[92px]">
-      <section
+    <main class="container mx-auto space-y-[168px]">
+        <section
             class="bg-[url('./assets/Bitmap1.jpg')] bg-cover h-[450px] text-light-cream flex items-center pl-[85px]">
             <div class="max-w-[493px]">
                 <h1 class="mb-[32px]">About Us</h1>
-                <p class="body mb-[56px]">Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee from around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in every shipment.</p>
+                <p class="body mb-[56px]">Coffeeroasters began its journey of exotic discovery in 1999, highlighting
+                    stories of coffee from around the world. We have since been dedicated to bring the perfect cup -
+                    from bean to brew - in every shipment.</p>
             </div>
-      </section>
+        </section>
+
+        <section class="flex-center gap-[125px]">
+            <div><img src="./assets/man.png" class="h-[520px] w-[445px]" alt=""></div>
+            <div class="max-w-[540px] space-y-[32px]">
+                <h2>Our commitment</h2>
+                <p class="body">We’re built on a simple mission and a commitment to doing good along the way. We want to
+                    make it easy for you to discover and brew the world’s best coffee at home. It all starts at the
+                    source. To locate the specific lots we want to purchase, we travel nearly 60 days a year trying to
+                    understand the challenges and opportunities in each of these places. We collaborate with exceptional
+                    coffee growers and empower a global community of farmers through with well above fair-trade
+                    benchmarks. We also offer training, support farm community initiatives, and invest in coffee plant
+                    science. Curating only the finest blends, we roast each lot to highlight tasting profiles
+                    distinctive to their native growing region.</p>
+            </div>
+        </section>
+
+    </main>
 
 </body>
 
