--- a/about.html
+++ b/about.html
@@ -102,6 +102,18 @@
             </div>
         </section>
 
+        <section class="text-light-cream relative h-full">
+            <div class="mt-[88px] bg-Midnight h-[474px] flex gap-[125px] pl-[85px] rounded-[10px]">
+                <div class="max-w-[540px] space-y-[32px] mt-[88px] ">
+                    <h2>Uncompromising quality</h2>
+                    <p class="body">Although we work with growers who pay close attention to all stages of harvest and processing, we employ, on our end, a rigorous quality control program to avoid over-roasting or baking the coffee dry. Every bag of coffee is tagged with a roast date and batch number. Our goal is to roast consistent, user-friendly coffee, so that brewing is easy and enjoyable.</p>
+                </div>
+                <img src="./assets/caffee.png" class="w-[445px] h-[474px] absolute top-[-88px] right-[85px] rounded-[10px]" alt="">
+            </div>
+        </section>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quam alias error atque laudantium sit officia a porro velit! Quasi, voluptatem aut unde veniam laudantium aliquam architecto cumque dicta quaerat!</p>
+
     </main>
 
 </body>
