create Our headquarters Section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <section class="mt-[296px] max-w-[1045px] mx-auto">
             <h4 class="mb-[32px] text-grey">How it works</h4>
 
-            <div class="grid grid-cols-3 gap-[95px] space-y-[38px] mb-[90px]">
+            <div class="grid grid-cols-3 gap-[95px] mb-[90px]">
                 <div class="space-y-[38px]">
                     <div class="number">01</div>
                     <div class="space-y-[42px]">
