--- a/about.html
+++ b/about.html
@@ -112,7 +112,45 @@
             </div>
         </section>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quam alias error atque laudantium sit officia a porro velit! Quasi, voluptatem aut unde veniam laudantium aliquam architecto cumque dicta quaerat!</p>
+         <section class="max-w-[1045px] mx-auto space-y-[72px]">
+            <h4 class="text-grey">Our headquarters</h4>
+
+            <div class="grid grid-cols-3 gap-[95px]">
+                <div class="space-y-[45px]">
+                    <img src="./assets/1.svg" alt="UK">
+                    <div class="space-y-[24px]">
+                        <h3 class="text-dark-blue">United Kingdom</h3>
+                        <p class="body">68  Asfordby Rd<br>
+                            Alcaston<br>
+                            SY6 1YA<br>
+                            +44 1241 918425</p>
+                    </div>
+                </div>
+
+                <div class="space-y-[45px]">
+                    <img src="./assets/2.svg" alt="Canada">
+                    <div class="space-y-[24px]">
+                        <h3  class="text-dark-blue">Canada</h3>
+                        <p class="body">68  Asfordby Rd<br>
+                            Alcaston<br>
+                            SY6 1YA<br>
+                            +44 1241 918425</p>
+                    </div>
+                </div>
+
+                <div class="space-y-[45px]">
+                    <img src="./assets/3.svg" alt="Australia">
+                    <div class="space-y-[24px]">
+                        <h3  class="text-dark-blue">Australia</h3>
+                       <p class="body">68  Asfordby Rd<br>
+                            Alcaston<br>
+                            SY6 1YA<br>
+                            +44 1241 918425</p>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
 
     </main>
 
