--- a/about.html
+++ b/about.html
@@ -154,6 +154,24 @@
 
     </main>
 
+            <footer class="bg-Midnight h-[120px] flex-between px-[85px] mb-[88px]">
+        <div class="flex gap-[103px]">
+          <img src="assets/Group 5.png" alt="Cofeeroaster" class="w-[235px] h-[25px]">
+          <nav>
+            <a href="#home">home</a>
+            <a href="./about.html">about us</a>
+            <a href="#plan">Create your plan</a>
+          </nav>
+          
+        </div>
+        <div class="flex-between gap-[24px]">
+          <a href="www.facebook.com"><img src="assets/Path (2).svg" alt="Facebook"></a>
+          <a href="www.instagram.com"><img src="assets/Shape.svg" alt="Instagram"></a>
+          <a href="www.twitter"><img src="assets/Path.svg" alt="Twitter"></a>
+          </ul>
+        </div>
+      </footer>
+
 </body>
 
 </html>
