--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
 
             <button>Create your plan</button>
         </section>
+    </main>
 
-        <footer class="bg-Midnight h-[120px] flex-between px-[85px] mb-[88px]">
+            <footer class="container mx-auto bg-Midnight h-[120px] flex-between  mt-[115px] px-[85px] mb-[88px]">
         <div class="flex gap-[103px]">
           <img src="assets/Group 5.png" alt="Cofeeroaster" class="w-[235px] h-[25px]">
           <nav>
@@ -223,9 +224,6 @@
           </ul>
         </div>
       </footer>
-
-
-    </main>
 </body>
 
 </html>
