--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <section>
 
             <span class="title text-center block linear">our collection</span>
-            <div class="grid lg:grid-cols-4 gap-[37px] px-[20px]">
+            <div class="grid gap-y-[48px] lg:grid-cols-4 md:gap-y-[32px] lg:gap-x-[37px] px-[20px]">
 
                 <div class="colection">
                     <img src="./assets/kopi1 copy.png" class="w-[255px]" alt="Gran Espresso">
